cpp/relink/include/relink/standard_msgs.hpp

// std_msgs/Empty -- zero-byte marker message (e.g. a "tick"/trigger topic).
struct Empty {};
// std_msgs/Time -- wall-clock timestamp, POSIX (sec, nsec) pair.
struct Time {
    uint32_t sec;
    uint32_t nsec;

    static Time now() {
        struct timespec ts{};
        ::clock_gettime(CLOCK_REALTIME, &ts);
        return Time{static_cast<uint32_t>(ts.tv_sec), static_cast<uint32_t>(ts.tv_nsec)};
    }
};
// std_msgs/Duration -- signed (sec, nsec) pair, e.g. an elapsed time.
struct Duration {
    int32_t sec;
    int32_t nsec;
};
// std_msgs/ColorRGBA -- each channel 0.0-1.0, per ROS convention.
struct ColorRGBA {
    float r;
    float g;
    float b;
    float a;
};
// std_msgs/Header -- seq counter, timestamp, and a coordinate-frame
// name. frame_id is fixed-size (see the file-level comment above);
// use set_frame_id()/frame_id_str() rather than touching the raw
// buffer, so truncation and null-termination are handled consistently.
struct Header {
    uint32_t seq;
    Time stamp;
    char frame_id[kFrameIdMaxLen]; // not guaranteed null-terminated if exactly kFrameIdMaxLen chars

    void set_frame_id(const char* name) {
        std::memset(frame_id, 0, sizeof(frame_id));
        std::strncpy(frame_id, name, sizeof(frame_id) - 1);
    }
    // Always returns a null-terminated view, even if the stored name
    // filled the buffer exactly (memcpy + explicit terminator, since
    // strncpy alone doesn't guarantee termination in that case).
    std::string frame_id_str() const {
        char buf[kFrameIdMaxLen + 1];
        std::memcpy(buf, frame_id, kFrameIdMaxLen);
        buf[kFrameIdMaxLen] = '\0';
        return std::string(buf);
    }
    void stamp_now() { stamp = Time::now(); }
};
struct String {
    char data[kStringMaxLen];

    void set(const char* s) {
        std::memset(data, 0, sizeof(data));
        std::strncpy(data, s, sizeof(data) - 1);
    }
    std::string str() const {
        char buf[kStringMaxLen + 1];
        std::memcpy(buf, data, kStringMaxLen);
        buf[kStringMaxLen] = '\0';
        return std::string(buf);
    }
};
static_assert(sizeof(Empty) == 1, "Empty should be the smallest possible struct (compilers can't do 0)");
// geometry_msgs/Vector3 -- see file-level comment: float32, not ROS's float64.
struct Vector3 {
    float x;
    float y;
    float z;
};
// geometry_msgs/Point -- identical layout to Vector3; kept as a
// separate type (not a using-alias) so a function signature makes the
// semantic distinction (a position vs. a direction/velocity) visible,
// matching ROS's own modeling choice.
struct Point {
    float x;
    float y;
    float z;
};
struct Quaternion {
    float x;
    float y;
    float z;
    float w;
};
struct Pose {
    Point position;
    Quaternion orientation;
};
struct Twist {
    Vector3 linear;
    Vector3 angular;
};
struct Accel {
    Vector3 linear;
    Vector3 angular;
};
struct Wrench {
    Vector3 force;
    Vector3 torque;
};
struct PoseStamped {
    std_msgs::Header header;
    Pose pose;
};
struct TwistStamped {
    std_msgs::Header header;
    Twist twist;
};
// geometry_msgs/Point32 -- same shape as Point, distinct ROS type (used
// where the smaller wire size matters, e.g. Polygon below).
struct Point32 {
    float x;
    float y;
    float z;
};
struct Transform {
    Vector3 translation;
    Quaternion rotation;
};
struct TransformStamped {
    std_msgs::Header header;
    char child_frame_id[std_msgs::kFrameIdMaxLen];
    Transform transform;

    void set_child_frame_id(const char* name) {
        std::memset(child_frame_id, 0, sizeof(child_frame_id));
        std::strncpy(child_frame_id, name, sizeof(child_frame_id) - 1);
    }
    std::string child_frame_id_str() const {
        char buf[std_msgs::kFrameIdMaxLen + 1];
        std::memcpy(buf, child_frame_id, std_msgs::kFrameIdMaxLen);
        buf[std_msgs::kFrameIdMaxLen] = '\0';
        return std::string(buf);
    }
};
struct PoseWithCovariance {
    Pose pose;
    float covariance[36]; // row-major 6x6, per ROS -- float32 not ROS's float64, see file header
};
struct TwistWithCovariance {
    Twist twist;
    float covariance[36];
};
struct PoseArray {
    std_msgs::Header header;
    uint32_t count; // number of valid entries in poses[0..count), <= kMaxPosesInArray
    Pose poses[kMaxPosesInArray];
};
struct Polygon {
    uint32_t count;
    Point32 points[kMaxPolygonPoints];
};
static_assert(sizeof(Vector3) == 12, "Vector3 must be 12 bytes (3x float32)");
static_assert(sizeof(Point) == 12, "Point must be 12 bytes (3x float32)");
static_assert(sizeof(Point32) == 12, "Point32 must be 12 bytes (3x float32)");
static_assert(sizeof(Quaternion) == 16, "Quaternion must be 16 bytes (4x float32)");
// sensor_msgs/Imu -- orientation + angular velocity + linear
// acceleration, each with a 3x3 covariance matrix, exactly ROS's Imu
// shape (float32 throughout, see the file-level comment).
struct Imu {
    std_msgs::Header header;
    geometry_msgs::Quaternion orientation;
    float orientation_covariance[9];
    geometry_msgs::Vector3 angular_velocity;
    float angular_velocity_covariance[9];
    geometry_msgs::Vector3 linear_acceleration;
    float linear_acceleration_covariance[9];
};
// sensor_msgs/NavSatStatus
struct NavSatStatus {
    static constexpr int8_t kNoFix = -1, kFix = 0, kSbasFix = 1, kGbasFix = 2;
    static constexpr uint16_t kServiceGps = 1, kServiceGlonass = 2, kServiceCompass = 4, kServiceGalileo = 8;
    int8_t status;
    uint16_t service; // bitmask of the kService* constants above
};
// sensor_msgs/NavSatFix -- GPS fix. Keeps double for lat/lon/altitude
// (see file-level comment on precision).
struct NavSatFix {
    static constexpr uint8_t kCovarianceUnknown = 0, kCovarianceApproximated = 1,
                              kCovarianceDiagonalKnown = 2, kCovarianceKnown = 3;
    std_msgs::Header header;
    NavSatStatus status;
    double latitude;
    double longitude;
    double altitude;
    double position_covariance[9];
    uint8_t position_covariance_type;
};
// sensor_msgs/MagneticField -- Tesla, per ROS convention.
struct MagneticField {
    std_msgs::Header header;
    geometry_msgs::Vector3 magnetic_field;
    float magnetic_field_covariance[9]; // float32, see file-level comment
};
// sensor_msgs/Temperature -- degrees Celsius, per ROS convention.
struct Temperature {
    std_msgs::Header header;
    double temperature;
    double variance; // 0 means "unknown"
};
// sensor_msgs/Range -- a single-beam range reading (ultrasonic/IR/ToF).
struct Range {
    static constexpr uint8_t kUltrasound = 0, kInfrared = 1;
    std_msgs::Header header;
    uint8_t radiation_type;
    float field_of_view;    // radians
    float min_range;        // meters
    float max_range;        // meters
    float range;            // meters
};
// sensor_msgs/RegionOfInterest
struct RegionOfInterest {
    uint32_t x_offset;
    uint32_t y_offset;
    uint32_t height;
    uint32_t width;
    uint8_t do_rectify; // bool, stored as a byte on the wire (see wire.hpp's Bool)
};
// sensor_msgs/CameraInfo -- distortion_model is a fixed string (see file
// header); D is a fixed-capacity array (see PoseArray's comment on that
// pattern) since ROS leaves its length model-dependent.
struct CameraInfo {
    std_msgs::Header header;
    uint32_t height;
    uint32_t width;
    char distortion_model[std_msgs::kStringMaxLen];
    uint32_t d_count; // valid entries in D[0..d_count), <= kMaxDistortionCoeffs
    double D[kMaxDistortionCoeffs];
    double K[9];
    double R[9];
    double P[12];
    uint32_t binning_x;
    uint32_t binning_y;
    RegionOfInterest roi;

    void set_distortion_model(const char* name) {
        std::memset(distortion_model, 0, sizeof(distortion_model));
        std::strncpy(distortion_model, name, sizeof(distortion_model) - 1);
    }
    std::string distortion_model_str() const {
        char buf[std_msgs::kStringMaxLen + 1];
        std::memcpy(buf, distortion_model, std_msgs::kStringMaxLen);
        buf[std_msgs::kStringMaxLen] = '\0';
        return std::string(buf);
    }
};
// sensor_msgs/PointField
struct PointField {
    static constexpr uint8_t kInt8 = 1, kUint8 = 2, kInt16 = 3, kUint16 = 4,
                              kInt32 = 5, kUint32 = 6, kFloat32 = 7, kFloat64 = 8;
    char name[std_msgs::kStringMaxLen];
    uint32_t offset;
    uint8_t datatype;
    uint32_t count;

    void set_name(const char* s) {
        std::memset(name, 0, sizeof(name));
        std::strncpy(name, s, sizeof(name) - 1);
    }
    std::string name_str() const {
        char buf[std_msgs::kStringMaxLen + 1];
        std::memcpy(buf, name, std_msgs::kStringMaxLen);
        buf[std_msgs::kStringMaxLen] = '\0';
        return std::string(buf);
    }
};
// sensor_msgs/PointCloud2 -- ROS's `uint8[] data` (typically megabytes
// for a real point cloud) becomes a small fixed cap here, NOT a
// production-ready ReLink point-cloud path -- for real point cloud
// volumes, chunk manually the way ImageChunk does for images (see
// sensor_msgs::ImageChunk above), or advertise/subscribe per-point
// instead of batching a whole cloud into one message.
struct PointCloud2 {
    std_msgs::Header header;
    uint32_t height;
    uint32_t width;
    uint32_t fields_count;
    PointField fields[kMaxPointFields];
    uint8_t is_bigendian;
    uint32_t point_step;
    uint32_t row_step;
    uint32_t data_len; // valid bytes in data[0..data_len), <= kMaxPointCloudBytes
    uint8_t data[kMaxPointCloudBytes];
    uint8_t is_dense;
};
// sensor_msgs/LaserScan -- ROS's `float32[] ranges`/`intensities` become
// fixed kMaxLaserScanPoints-capacity arrays (see PoseArray's comment).
struct LaserScan {
    std_msgs::Header header;
    float angle_min, angle_max, angle_increment;
    float time_increment, scan_time, range_min, range_max;
    uint32_t ranges_count;
    float ranges[kMaxLaserScanPoints];
    uint32_t intensities_count;
    float intensities[kMaxLaserScanPoints];
};
// sensor_msgs/JointState -- ROS's `string[] name` becomes a fixed array
// of fixed strings; position/velocity/effort become fixed-capacity
// float arrays (see PoseArray's comment on the general pattern). All
// four share one `count` since ROS itself requires them to be either
// empty or the same length as `name`.
struct JointState {
    std_msgs::Header header;
    uint32_t count; // valid entries in every array below, <= kMaxJoints
    char name[kMaxJoints][std_msgs::kStringMaxLen];
    double position[kMaxJoints];
    double velocity[kMaxJoints];
    double effort[kMaxJoints];

    void set_name(uint32_t i, const char* s) {
        std::memset(name[i], 0, std_msgs::kStringMaxLen);
        std::strncpy(name[i], s, std_msgs::kStringMaxLen - 1);
    }
    std::string name_str(uint32_t i) const {
        char buf[std_msgs::kStringMaxLen + 1];
        std::memcpy(buf, name[i], std_msgs::kStringMaxLen);
        buf[std_msgs::kStringMaxLen] = '\0';
        return std::string(buf);
    }
};
// nav_msgs/Odometry -- pose + twist, each with a 6x6 covariance matrix,
// plus a fixed-size child_frame_id (see file-level comment on strings).
struct Odometry {
    std_msgs::Header header;
    char child_frame_id[std_msgs::kFrameIdMaxLen];
    geometry_msgs::Pose pose;
    float pose_covariance[36];
    geometry_msgs::Twist twist;
    float twist_covariance[36];

    void set_child_frame_id(const char* name) {
        std::memset(child_frame_id, 0, sizeof(child_frame_id));
        std::strncpy(child_frame_id, name, sizeof(child_frame_id) - 1);
    }
    std::string child_frame_id_str() const {
        char buf[std_msgs::kFrameIdMaxLen + 1];
        std::memcpy(buf, child_frame_id, std_msgs::kFrameIdMaxLen);
        buf[std_msgs::kFrameIdMaxLen] = '\0';
        return std::string(buf);
    }
};